# rules_rust

./: MODULE.bazel  WORKSPACE.bazel
.bazelci/: presubmit.yml
cargo/: features.bzl
cargo/cargo_build_script_runner/: bin.rs
cargo/private/: cargo_build_script.bzl  features.bzl
docs/: rust_proto.md
examples/: .bazelignore
examples/expand/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  ok_binary.expand.expected.rs  ok_library.expand.expected.rs  ok_test.expand.expected.rs
proto/: defs.bzl  repositories.bzl
proto/prost/: BUILD.bazel  defs.bzl  repositories.bzl
proto/prost/private/: BUILD.bazel  prost.bzl  protoc_wrapper.rs  providers.bzl
proto/prost/private/tests/bazel_remote_apis/: BUILD.bazel  remote_execution_test.rs  semver_test.rs
proto/prost/private/tests/complex_imports/googleapis/google/api/: BUILD.bazel  annotations_test.rs
proto/prost/private/tests/complex_imports/googleapis/google/bytestream/: BUILD.bazel  bytestream_test.rs
proto/prost/private/tests/complex_imports/googleapis/google/longrunning/: BUILD.bazel  longrunning_test.rs
proto/prost/private/tests/complex_imports/googleapis/google/rpc/: BUILD.bazel  rpc_test.rs
proto/prost/private/tests/nesting/: BUILD.bazel  nested_messages.proto  nested_messages_test.rs
proto/prost/private/tests/package_imports/: BUILD.bazel
proto/prost/private/tests/proto/a/: BUILD.bazel  a.proto
proto/prost/private/tests/proto/a/b/: BUILD.bazel  b.proto  b_test.rs
proto/prost/private/tests/proto/a/b/c/: BUILD.bazel  c.proto  c_test.rs
proto/prost/private/tests/transitive_dependencies/: BUILD.bazel  a.proto  a_test.rs  transition.bzl
proto/prost/private/tests/types/: BUILD.bazel  types.proto  types_test.rs
proto/prost/private/tests/well_known_types/: BUILD.bazel  well_known_types.proto  well_known_types_test.rs
rust/: defs.bzl
rust/private/: expand.bzl
test/: deps.bzl
test/cargo_build_script/: BUILD.bazel
