load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//rust:defs.bzl", "rust_library_group")
load(":defs.bzl", "rust_prost_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "toolchain_type",
)

rust_library_group(
    name = "prost_runtime",
    deps = [
        "//proto/prost/private/3rdparty/crates:prost",
    ],
)

rust_library_group(
    name = "tonic_runtime",
    deps = [
        ":prost_runtime",
        "//proto/prost/private/3rdparty/crates:tonic",
    ],
)

rust_prost_toolchain(
    name = "default_prost_toolchain_impl",
    prost_plugin = "//proto/prost/private/3rdparty/crates:protoc-gen-prost__protoc-gen-prost",
    prost_plugin_flag = "--plugin=protoc-gen-prost=%s",
    prost_runtime = ":prost_runtime",
    prost_types = "//proto/prost/private/3rdparty/crates:prost-types",
    proto_compiler = "@com_google_protobuf//:protoc",
    tonic_plugin = "//proto/prost/private/3rdparty/crates:protoc-gen-tonic__protoc-gen-tonic",
    tonic_plugin_flag = "--plugin=protoc-gen-tonic=%s",
    tonic_runtime = ":tonic_runtime",
)

toolchain(
    name = "default_prost_toolchain",
    toolchain = "default_prost_toolchain_impl",
    toolchain_type = "//proto/prost:toolchain_type",
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//proto/prost/private:bzl_lib",
        "//rust:bzl_lib",
    ],
)
