load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")
load(":prost.bzl", "RUST_EDITION", "current_prost_runtime")

current_prost_runtime(
    name = "current_prost_runtime",
)

rust_binary(
    name = "protoc_wrapper",
    srcs = ["protoc_wrapper.rs"],
    edition = RUST_EDITION,
    visibility = ["//visibility:public"],
    deps = [":current_prost_runtime"],
)

rust_test(
    name = "protoc_wrapper_test",
    crate = ":protoc_wrapper",
    edition = RUST_EDITION,
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//proto/prost:__pkg__"],
    deps = [
        "//proto/prost/private/3rdparty:bzl_lib",
    ],
)
