load("@rules_proto//proto:defs.bzl", "proto_library")
load("//proto/prost:defs.bzl", "rust_tonic_library")
load("//rust:defs.bzl", "rust_test")

package(default_visibility = ["//proto/prost/private/tests:__subpackages__"])

proto_library(
    name = "b_proto",
    srcs = [
        "b.proto",
    ],
    deps = [
        "//proto/prost/private/tests/proto/a/b/c:c_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

rust_tonic_library(
    name = "b_rs_proto",
    proto = ":b_proto",
)

rust_test(
    name = "b_test",
    srcs = ["b_test.rs"],
    edition = "2021",
    deps = [
        ":b_rs_proto",
    ],
)
