load("@rules_proto//proto:defs.bzl", "proto_library")
load("//proto:defs.bzl", "rust_prost_library")
load("//rust:defs.bzl", "rust_test")

proto_library(
    name = "annotations_proto",
    srcs = [
        "annotations.proto",
        "client.proto",
        "field_behavior.proto",
        "http.proto",
    ],
    strip_import_prefix = "/proto/prost/private/tests/complex_imports/googleapis",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

rust_prost_library(
    name = "annotations_rs_proto",
    proto = ":annotations_proto",
)

rust_test(
    name = "annotations_test",
    srcs = ["annotations_test.rs"],
    edition = "2021",
    deps = [
        ":annotations_rs_proto",
    ],
)
