load("@rules_proto//proto:defs.bzl", "proto_library")
load("//proto:defs.bzl", "rust_prost_library")

proto_library(
    name = "bytestream_proto",
    srcs = ["bytestream.proto"],
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "bytestream_rs_proto",
    proto = ":bytestream_proto",
)
