load("@rules_proto//proto:defs.bzl", "proto_library")
load("//proto:defs.bzl", "rust_tonic_library")
load("//rust:defs.bzl", "rust_test")

proto_library(
    name = "longrunning_proto",
    srcs = ["operations.proto"],
    strip_import_prefix = "/proto/prost/private/tests/complex_imports/googleapis",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/prost/private/tests/complex_imports/googleapis/google/api:annotations_proto",
        "//proto/prost/private/tests/complex_imports/googleapis/google/rpc:status_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

rust_tonic_library(
    name = "longrunning_rs_proto",
    proto = ":longrunning_proto",
)

rust_test(
    name = "longrunning_test",
    srcs = ["longrunning_test.rs"],
    edition = "2021",
    deps = [
        ":longrunning_rs_proto",
    ],
)
