load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "code_proto",
    srcs = [
        "code.proto",
    ],
    strip_import_prefix = "/proto/prost/private/tests/complex_imports/googleapis",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "error_details_proto",
    srcs = [
        "error_details.proto",
    ],
    strip_import_prefix = "/proto/prost/private/tests/complex_imports/googleapis",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:duration_proto",
    ],
)

proto_library(
    name = "status_proto",
    srcs = [
        "status.proto",
    ],
    strip_import_prefix = "/proto/prost/private/tests/complex_imports/googleapis",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)
