load("@rules_proto//proto:defs.bzl", "proto_library")
load("//proto:defs.bzl", "rust_prost_library")
load("//rust:defs.bzl", "rust_test")

proto_library(
    name = "code_proto",
    srcs = [
        "code.proto",
    ],
    strip_import_prefix = "/proto/prost/private/tests/complex_imports/googleapis",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "error_details_proto",
    srcs = [
        "error_details.proto",
    ],
    strip_import_prefix = "/proto/prost/private/tests/complex_imports/googleapis",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:duration_proto",
    ],
)

proto_library(
    name = "status_proto",
    srcs = [
        "status.proto",
    ],
    strip_import_prefix = "/proto/prost/private/tests/complex_imports/googleapis",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)

rust_prost_library(
    name = "code_rs_proto",
    proto = ":code_proto",
)

rust_prost_library(
    name = "error_details_rs_proto",
    proto = ":error_details_proto",
)

rust_prost_library(
    name = "status_rs_proto",
    proto = ":status_proto",
)

rust_test(
    name = "rpc_test",
    srcs = ["rpc_test.rs"],
    edition = "2021",
    deps = [
        ":code_rs_proto",
        ":error_details_rs_proto",
        ":status_rs_proto",
    ],
)
